fixed unit tests coverage working, omiting password field from json responses
