# docs/swagger.yaml
@@ -15,13 +15,6 @@ definitions:
         type: string
       nickname:
         type: string
-    type: object
-  models.UserRegister:
-    properties:
-      email:
-        type: string
-      nickname:
-        type: string
       password:
         type: string
     type: object
@@ -46,7 +39,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/models.UserRegister'
+          $ref: '#/definitions/models.User'
       responses:
         "200":
           description: Token
@@ -81,11 +74,6 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/models.Post'
-      - description: 'Format: ''Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhdXRob3JpemVkIjp0cnVlLCJleHAiOjE2MDQ1MzExMDIsInVzZXJfaWQiOjF9.O63ZS_Poy29dDdcZqHDN0XeMPbYPX-Vfyl_FPfsMTvQ'''
-        in: header
-        name: Authorization
-        required: true
-        type: string
       responses:
         "200":
           description: OK
